--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -4,6 +4,19 @@ MEGAGLEST CHANGELOG
 To see a timeline of detail changes please visit:
 https://github.com/MegaGlest/megaglest-source/commits/master
 
+v3.13.0
+- Important sounds like "attack alarm" are always played
+- Display build/morph/upgrade time
+- New AI tag <ai-build-size> for units(buildings) which allows fake size for buildings while placing them.
+- Much better error handling and messages especially for modders and xml-related problems.
+- fix unwanted double event for some keys ( like alt+enter )
+- map filter option for game setup on headless server
+- option to select/command multiple buildings of same type. ( uniform-selection )
+- Major cross platform OOS fix which especially showed up quite often when playing without fog of war.
+- You must proof basic game knowledge before you can play online by winning a special scenario.
+- less visible parts of black squares while rendering cliffs.
+- possibility to let units spawn units on death
+
 v3.12.0
 - MegaGlest uses SDL2 now
 - glowing meshes. ( models can glow like particles do )
